--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "flaneurette/mysqli-db-class",
     "description": "A lightweight mysqli hook",
     "require": {
-        "php": ">=5.6",
-        "another-vendor/package": "1.*"
+        "php": ">=5.6"
     }
 }
